Atualizacao do projeto 18/12/2017

--- a/servicos/servico-divisorias.html
+++ b/servicos/servico-divisorias.html
@@ -54,7 +54,7 @@
 	</header>
 
 	<section id="servico-pvc" class="container-fluid servico-conteudo">
-		<h2 class="titulo-secao text-center">Divisórias</h2>
+		<h2 class="titulo-secao text-center">DIVISORIAS</h2>
 		<div class="container-fluid">
 			<p>As divisórias de PVC são uma excelente opção para quem deseja  subdividir qualquer ambiente. A HP DRYWALL utiliza perfis de drywall para dar mais estabilidade e resistência à esta divisória. De baixo custo, ela não necessita de manutenção,  massa corrida e nem pintura. Podendo optar pelo PVC branco geminado, liso ou decorado, este tipo de trabalho proporcionará à você agilidade e praticidade para fracionar seus ambientes.</p>
 			<p>Características e vantagens das Divisórias de PVC:</p>
@@ -75,7 +75,7 @@
 		<div class="page-content-area">
 			<div class="row">
 				<div class="col-sm-12">
-					<h4 class="titulo-servico">GALERIA DE FOTOS - REBAIXAMENTO PVC</h4>
+					<h4 class="titulo-servico">GALERIA DE FOTOS - DIVISÓRIAS DE PVC</h4>
 				</div>
 			</div>
 
@@ -86,8 +86,8 @@
 						<ul class="ace-thumbnails clearfix">
 							<!-- #section:pages/gallery -->
 							<li>
-								<a href="../img/galeria-rebaixamento-pvc/a1.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/a1.jpg" />
+								<a href="../img/galeria-divisorias/006.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-divisorias/006.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -95,8 +95,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-rebaixamento-pvc/dsc1834.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/dsc1834.jpg" />
+								<a href="../img/galeria-divisorias/divisoria-eucatex.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-divisorias/divisoria-eucatex.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -104,8 +104,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-rebaixamento-pvc/DSCN1841.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/DSCN1841.jpg" />
+								<a href="../img/galeria-divisorias/IMG_20150824_214530365.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-divisorias/IMG_20150824_214530365.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -113,130 +113,14 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-rebaixamento-pvc/DSCN1855.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/DSCN1855.jpg" />
+								<a href="../img/galeria-divisorias/IMG_20150824_214551029.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-divisorias/IMG_20150824_214551029.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
 								</a>
 							</li>
 
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/DSCN1856.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/DSCN1856.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/DSCN1862.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/DSCN1862.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/DSCN1902.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/DSCN1902.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/ADEDB5_13.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/ADEDB5_13.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/IMG_20140425_153326_0.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/IMG_20140425_153326_0.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/IMG_20140425_153337_0.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/IMG_20140425_153337_0.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/IMG_20140425_153412_0.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/IMG_20140425_153412_0.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/IMG_20140425_153707_0.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/IMG_20140425_153707_0.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/IMG_20140425_153725_0.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/IMG_20140425_153725_0.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/IMG_20140425_153806_0.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/IMG_20140425_153806_0.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/IMG_20140709_110253_0.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/IMG_20140709_110253_0.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/pvc-002.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/pvc-002.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
-
-							<li>
-								<a href="../img/galeria-rebaixamento-pvc/z1.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/z1.jpg" />
-									<div class="text">
-										<div class="inner">Clique para ampliar a foto</div>
-									</div>
-								</a>
-							</li>
 						</ul>
 					</div><!-- PAGE CONTENT ENDS -->
 				</div><!-- /.col -->
