--- a/servicos/servico-forro-removivel.html
+++ b/servicos/servico-forro-removivel.html
@@ -54,22 +54,11 @@
 	</header>
 
 	<section id="servico-drywall" class="container-fluid servico-conteudo">
-		<h2 class="titulo-secao text-center">DRYWALL</h2>
+		<h2 class="titulo-secao text-center">FORRO REMOVÍVEL</h2>
 		<div class="container-fluid">
-			<p>O drywall é o que há de mais moderno no mercado, quando falamos de método construtivo, conhecido também como o gesso acartonado; Consiste em fixação de chapas de gesso acartonado em perfis metálicos ou em estrutura de ferro ou madeira que irão produzir paredes de forma rápida e resistente para seus ambientes internos.</p>
-			<p>As paredes de Drywall podem se adequar a necessidade do cliente, fazendo assim paredes com isolamento acústico, termoacústico, parede resistente ao fogo, resistente a umidade e paredes que podem ser aplicados revestimentos de qualquer espécie como nas paredes de alvenaria convencional.</p>
-			<p>Diferente do que as pessoas acham drywall não é divisória!</p>
-			<p>Drywall consiste na construção de paredes, como o termo diz drywall no inglês significa ‘’parede seca’’.</p>
-			<p>Nos Estados Unidos em toda Europa este método já é utilizado a mais de cem anos chegando para nós aqui no Brasil há aproximadamente 15 anos, sendo  regulamentado no ano de 2009. (NBR15.578)</p>
-			<p>Como tudo que é novo no mercado alguns clientes oferecem ainda alguma resistência para adquirir esse tipo de serviço não conhecendo as suas vantagens e tamanha a eficácia da produção de paredes de Drywall.</p>
-			O drywall irá proporcionar para você:
-			<ul>
-				<li>Uma obra mais rápida</li>
-				<li>Mais limpa</li>
-				<li>Com fidelidade orçamentária</li>
-			</ul>
-			<p>Você poderá nas paredes de Drywall passar tubulações hidráulicas e elétricas assim como nas paredes de alvenaria.</p>
-			<p>Os reparos feitos nas paredes de Drywall são reparos muito mais lindos que não ocasionaram entulho muito menos barulho para fazer Tais reparos nas instalações elétricas e hidráulicas quando necessários.</p>
+			<p>Essa modalidade de forro ganha espaço no mercado por ser extremamente leve, de fácil instalação e por seu desempenho térmico e acústico ser extraordinário. Seu material é 100% reciclável e resistente à ação de bactérias, fungos e insetos . Por sua praticidade, é mais indicado para uso em escritórios amplos em que trabalham muitas pessoas, áreas de indústrias e lojas.</p>
+			<p>A HP DRYWALL trabalha com modelos variados, sendo eles:  ISOPOR,  PLACAS DE PVC MODULAR, ISOVER, FORRO MINERAL E CHAPA KNAUF CLEANEO. O forro é composto por placas que são instaladas (suspensas em armações de aço perfiladas) e fixadas entre si em bases laterais. Por serem removíveis, ou seja: se for necessário acessar a parte de cima para vistorias, checagem de fiações ou reparos, basta retirá-las. Com isso, esse tipo de forro não implica nem impede possíveis mudanças na disposição do layout do ambiente em que foi instalado. A manutenção é outro </p>
+			
 		</div>
 	</section>
 	
@@ -78,7 +67,7 @@
 		<div class="page-content-area">
 			<div class="row">
 				<div class="col-sm-12">
-					<h4 class="titulo-servico">GALERIA DE FOTOS - DRYWALL</h4>
+					<h4 class="titulo-servico">GALERIA DE FOTOS - FORRO REMOVÍVEL</h4>
 				</div>
 			</div>
 
@@ -89,8 +78,8 @@
 						<ul class="ace-thumbnails clearfix">
 							<!-- #section:pages/gallery -->
 							<li>
-								<a href="../img/galeria-drywall/04.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/04.jpg" />
+								<a href="../img/galeria-forro-removivel/4_3.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/4_3.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -98,8 +87,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/7paredes-em-dry-wall2.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/7paredes-em-dry-wall2.jpg" />
+								<a href="../img/galeria-forro-removivel/70e4f0f30ab522aa5a34504931052f14.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/70e4f0f30ab522aa5a34504931052f14.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -107,8 +96,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/149-divisoria-drywall-90mm-3.png" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/149-divisoria-drywall-90mm-3.png" />
+								<a href="../img/galeria-forro-removivel/157-forro-modular-de-fibra-mineral-finetta-12.png" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/157-forro-modular-de-fibra-mineral-finetta-12.png" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -116,8 +105,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/50647_824560_7ed6b7.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/50647_824560_7ed6b7.jpg" />
+								<a href="../img/galeria-forro-removivel/0203-300x270.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/0203-300x270.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -125,8 +114,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/01452105078-Massa-Corrida-Acrilica.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/01452105078-Massa-Corrida-Acrilica.jpg" />
+								<a href="../img/galeria-forro-removivel/7403-forro-modular-thermatex-alpha-vt-24-sistema-c-amf-g.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/7403-forro-modular-thermatex-alpha-vt-24-sistema-c-amf-g.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -134,8 +123,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/313968998662014-07-04-04-44-26.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/313968998662014-07-04-04-44-26.jpg" />
+								<a href="../img/galeria-forro-removivel/16830670_429473837384477_3747187305658330646_n.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/16830670_429473837384477_3747187305658330646_n.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -143,8 +132,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/divisoria-dry-wall-4.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/divisoria-dry-wall-4.jpg" />
+								<a href="../img/galeria-forro-removivel/319515021715519.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/319515021715519.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -152,8 +141,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/divisoria-em-drywall_93887.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/divisoria-em-drywall_93887.jpg" />
+								<a href="../img/galeria-forro-removivel/573626017054436.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/573626017054436.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -161,8 +150,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/divisoria-em-drywall-apos-pintura_93891.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/divisoria-em-drywall-apos-pintura_93891.jpg" />
+								<a href="../img/galeria-forro-removivel/forro_isopor5.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro_isopor5.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -170,8 +159,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/divisrias_drywall_20140120_1212113409.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/divisrias_drywall_20140120_1212113409.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-de-gesso-removivel-5.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-de-gesso-removivel-5.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -179,8 +168,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/drywall-e-vidro.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/drywall-e-vidro.jpg" />
+								<a href="../img/galeria-forro-removivel/forrodeisopor2.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forrodeisopor2.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -188,8 +177,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/drywall-com-vidro4.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/drywall-com-vidro4.jpg" />
+								<a href="../img/galeria-forro-removivel/Forro-de-isopor-20150702213439.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/Forro-de-isopor-20150702213439.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -197,8 +186,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/drywall-com-vidro5.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/drywall-com-vidro5.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-de-isopor-a-2500.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-de-isopor-a-2500.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -206,8 +195,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/Forros-em-Guaruja-Parede-de-Gesso-Acartonado-1.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/Forros-em-Guaruja-Parede-de-Gesso-Acartonado-1.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-de-isopor-e-divisorias1141160771-99590-2917-whats-480301-MLB20290481881_042015-F.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-de-isopor-e-divisorias1141160771-99590-2917-whats-480301-MLB20290481881_042015-F.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -215,8 +204,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/foto3.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/foto3.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-de-isopor-r-690-ligue-11-96768-9385-687811-MLB20632296175_032016-F.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-de-isopor-r-690-ligue-11-96768-9385-687811-MLB20632296175_032016-F.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -224,8 +213,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/fotos-servicos-20150116_0434122979113.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/fotos-servicos-20150116_0434122979113.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-isopor_MLB-F-4426430260_062013.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-isopor_MLB-F-4426430260_062013.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -233,8 +222,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/IMG0315.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/IMG0315.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-isopor-igreja.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-isopor-igreja.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -242,8 +231,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/IMG00333.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/IMG00333.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-isopor-interna.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-isopor-interna.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -251,8 +240,8 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/paredes-de-gesso-divisorias-e-forros-em-drywall-pisosetc-13152-MLB20073300239_042014-F.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/paredes-de-gesso-divisorias-e-forros-em-drywall-pisosetc-13152-MLB20073300239_042014-F.jpg" />
+								<a href="../img/galeria-forro-removivel/forro-mineral-1.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/forro-mineral-1.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
@@ -260,8 +249,35 @@
 							</li>
 
 							<li>
-								<a href="../img/galeria-drywall/Paredes-de-Gesso-Sistema-Drywall.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/Paredes-de-Gesso-Sistema-Drywall.jpg" />
+								<a href="../img/galeria-forro-removivel/Forros-em-Guaruja-Doge-Forros-Forros-de-Isopor-06.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/Forros-em-Guaruja-Doge-Forros-Forros-de-Isopor-06.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-forro-removivel/img_forros_3_big.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/img_forros_3_big.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-forro-removivel/owa_foto5_g.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/owa_foto5_g.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-forro-removivel/Prisma_2.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-forro-removivel/Prisma_2.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
