--- a/servicos/servico-lustres.html
+++ b/servicos/servico-lustres.html
@@ -54,10 +54,18 @@
 	</header>
 
 	<section id="servico-pvc" class="container-fluid servico-conteudo">
-		<h2 class="titulo-secao text-center">Lustres</h2>
+		<h2 class="titulo-secao text-center">LUSTRES</h2>
 		<div class="container-fluid">
 			<p>Os lustres são elementos decorativos que enriquecem a decoração do ambiente, deixando-os requintados, elegantes e sofisticados. Como um trunfo nas mãos dos arquitetos e design de interiores, eles iluminam o espaço e dão um brilho todo especial ao ambiente.</p>
 			<p>Visando satisfazer a necessidade de nossos cliente, a HP DRYWALL fechou parceria com os melhores distribuidores do mercado nacional e internacional e isso faz com que tenhamos agilidade na entrega, qualidade garantida e os mais sofisticados modelos.</p>
+			<p>Conheça os nossos catalogos:</p>
+			<ul>
+				<li>
+					<a href="../docs/catalogos/Catalogo_DQ_Iluminacao_2017.pdf" target="_blank">
+						<img src="../img/img-catalogo.jpg" class="img-circle img-servicos img-catalogo" alt="DQ Iluminação">
+					</a>
+				</li>
+			</ul>
 		</div>
 	</section>
 	
@@ -76,7 +84,7 @@
 					<div>
 						<ul class="ace-thumbnails clearfix">
 							<!-- #section:pages/gallery -->
-							<li>
+							<!--<li>
 								<a href="../img/galeria-rebaixamento-pvc/a1.jpg" data-rel="colorbox">
 									<img width="150" height="150" alt="150x150" src="../img/galeria-rebaixamento-pvc/a1.jpg" />
 									<div class="text">
@@ -227,7 +235,7 @@
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
 								</a>
-							</li>
+							</li>-->
 						</ul>
 					</div><!-- PAGE CONTENT ENDS -->
 				</div><!-- /.col -->
