--- a/servicos/servico-pvc-decorado.html
+++ b/servicos/servico-pvc-decorado.html
@@ -53,19 +53,19 @@
 		</nav>
 	</header>
 
-	<section id="servico-pvc" class="container-fluid servico-conteudo">
-		<h2 class="titulo-secao text-center">ILUMINAÇÃO LED</h2>
+	<section id="servico-drywall" class="container-fluid servico-conteudo">
+		<h2 class="titulo-secao text-center">PVC DECORADO</h2>
 		<div class="container-fluid">
-			<p>As lâmpadas de LED fornecem mais intensidade na iluminação com consumo menor de energia; é uma forte tendência no mercado, pois oferece vantagens em termos de durabilidade e  são 80% mais  econômicas, podendo sua duração chegar até 50 mil horas!</p>
+			<p>O forro de pvc decorado é uma excelente opção dentro da área de design de interiores, pois alia as qualidades que o PVC já possui naturalmente, com algumas características estéticas que ele passou a reunir nos últimos anos. Totalmente adaptável a qualquer tipo de projeto, além de diminuir o tempo de duração de uma reforma, o PVC DECORADO cria um ambiente tanto bonito, como funcional, deixando-o mais aconchegante e confortável.</p>
 		</div>
 	</section>
 	
-	<section id="galeria-servico-pvc" class="container-fluid text-center bg-grey">
+	<section id="galeria-servico-drywall" class="container-fluid text-center bg-grey">
 
 		<div class="page-content-area">
 			<div class="row">
 				<div class="col-sm-12">
-					<h4 class="titulo-servico">GALERIA DE FOTOS - ILUMINAÇÃO LED</h4>
+					<h4 class="titulo-servico">GALERIA DE FOTOS - PVC DECORADO</h4>
 				</div>
 			</div>
 
@@ -75,14 +75,41 @@
 					<div>
 						<ul class="ace-thumbnails clearfix">
 							<!-- #section:pages/gallery -->
-							<li>
-								<a href="../img/galeria-iluminacao-led/LUMINARIAS.jpg" data-rel="colorbox">
-									<img width="150" height="150" alt="150x150" src="../img/galeria-iluminacao-led/LUMINARIAS.jpg" />
+							<!--<li>
+								<a href="../img/galeria-drywall/04.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/04.jpg" />
 									<div class="text">
 										<div class="inner">Clique para ampliar a foto</div>
 									</div>
 								</a>
 							</li>
+
+							<li>
+								<a href="../img/galeria-drywall/7paredes-em-dry-wall2.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/7paredes-em-dry-wall2.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-drywall/149-divisoria-drywall-90mm-3.png" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/149-divisoria-drywall-90mm-3.png" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>
+
+							<li>
+								<a href="../img/galeria-drywall/50647_824560_7ed6b7.jpg" data-rel="colorbox">
+									<img width="150" height="150" alt="150x150" src="../img/galeria-drywall/50647_824560_7ed6b7.jpg" />
+									<div class="text">
+										<div class="inner">Clique para ampliar a foto</div>
+									</div>
+								</a>
+							</li>-->
 
 						</ul>
 					</div><!-- PAGE CONTENT ENDS -->
