--- a/servicos/servico-pvc.html
+++ b/servicos/servico-pvc.html
@@ -54,7 +54,7 @@
 	</header>
 
 	<section id="servico-pvc" class="container-fluid servico-conteudo">
-		<h2 class="titulo-secao text-center">Rebaixamento de Pvc</h2>
+		<h2 class="titulo-secao text-center">REBAIXAMENTO DE PVC</h2>
 		<div class="container-fluid">
 			<p>PVC é um tipo de rebaixamento que valoriza a estética do seu ambiente, deixa mais claro e mais aconchegante.</p>
 			<p>Um forro de baixo custo, que não requer manutenção e pintura. Impossibilita o surgimento de pragas como cupim, mofos e outros insetos. Existem opções de PVC para todos os gostos, mas o fato é que, independentemente do preço e da estética deste tipo de forro, ele apresenta inúmeras vantagens, como:</p>
