Atualizacao do projeto 18/12/2017 - 2

--- a/servicos/servico-lustres.html
+++ b/servicos/servico-lustres.html
@@ -59,10 +59,10 @@
 			<p>Os lustres são elementos decorativos que enriquecem a decoração do ambiente, deixando-os requintados, elegantes e sofisticados. Como um trunfo nas mãos dos arquitetos e design de interiores, eles iluminam o espaço e dão um brilho todo especial ao ambiente.</p>
 			<p>Visando satisfazer a necessidade de nossos cliente, a HP DRYWALL fechou parceria com os melhores distribuidores do mercado nacional e internacional e isso faz com que tenhamos agilidade na entrega, qualidade garantida e os mais sofisticados modelos.</p>
 			<p>Conheça os nossos catalogos:</p>
-			<ul>
+			<ul class="ul-catalogo">
 				<li>
-					<a href="../docs/catalogos/Catalogo_DQ_Iluminacao_2017.pdf" target="_blank">
-						<img src="../img/img-catalogo.jpg" class="img-circle img-servicos img-catalogo" alt="DQ Iluminação">
+					<a href="../docs/catalogos/Catalogo_DQ_Iluminacao_2017.pdf#zoom=80" download>
+						<img src="../img/img-catalogo.jpg" class="img-servicos img-catalogo" alt="DQ Iluminação">
 					</a>
 				</li>
 			</ul>
